refrsh java data hashmap